есть ластик и это круто!!!

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             Цвет фона
             <input type="color" id="backgroundcolor" value="#93F1B7">
         </div>
+        <div>
+            Сейчас выбран инструмент
+            <button id="tool">Кисточка</button>
+        </div>
     </div>
+    
     <input type="range" id="size" min="5" max="100" step="1" value="50">
     <a download="myImage.jpg" id="save_image">Сохранить картинку</a>
     <script src="script.js"></script>
